# seattle-building-energy-prediction

./: .gitignore  Dictionnary.csv  LargestPropertyUseType.csv  README.md  bentoml.yaml  pyproject.toml
app/: README.md  bentofile.yaml  pyproject.toml
app/src/: schema.py
notebooks/: template_modelistation_supervisee.ipynb
src/: service.py
